--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ python-dateutil = "^2.8.0"
 
 [tool.poetry.group.dev.dependencies]
 openapi-python-client = "^0.14.1"
+pytest = "^7.0.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -41,3 +43,17 @@ exclude = '''
 [tool.isort]
 line_length = 120
 profile = "black"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "--strict-markers",
+    "--strict-config",
+    "--cov=longship",
+    "--cov=longship_api_client",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+]
