--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install Poetry
-      uses: snok/install-poetry@v1
+      uses: python-poetry/poetry@v1
       with:
-        version: latest
-        virtualenvs-create: true
-        virtualenvs-in-project: true
+        version: 1.7.1
 
     - name: Load cached venv
       id: cached-poetry-dependencies
